Fixed minor bug on ie8

--- a/sass/_widget.sass
+++ b/sass/_widget.sass
@@ -29,7 +29,7 @@
       .jp-jplayer
         +display_player
         margin-bottom: 10px
-        display: none
+        height: 0
         img
           width: 100% !important
       .jp-video-play
@@ -61,7 +61,7 @@
           padding: 0
           float: left
           width: 100%
-          margin: 4px auto
+          margin: -10px auto 10px
           li
             list-style-type: none
             float: left
@@ -96,6 +96,8 @@
             left: 0
             border: solid transparent
             background: transparent
+            line-height: 0
+            height: 0
         .jp-previous, .jp-next
           width: #{$small-button-size}px
           height: #{$small-button-size}px
@@ -161,7 +163,7 @@
           background: $volume-level-bg
       ul.jp-controls-volume
         margin: 4px auto
-        height: 23px
+        height: 15px
         float: left
         width: 100%
         a:link, a:visited
@@ -180,6 +182,8 @@
           position: absolute
           border: solid transparent
           background: transparent
+          line-height: 0
+          height: 0
         .before
           border-width: 7px 9px 7px 0
           border-right-color: $volume-bg
@@ -202,25 +206,24 @@
           border-color: $volume-bg
           position: absolute
           width: 6px
-          border-radius: 0 15px 0 0
-        .wave1
           border-right: 1px solid
+        .wave1
+          left: 4px
+          top: 5px
+          height: 4px
+        .wave2
           left: 6px
           top: 3px
-          height: 6px
-          +transform(rotate(28deg))
-        .wave2
-          border: 4px double
-          height: 6px
-          border-width: 4px 4px 0 0
-          left: 10px
-          top: 2px
-          +transform(rotate(45deg))
+          height: 7.9px
+        .wave3
+          left: 8px
+          top: 1px
+          height: 11.5px
         li
           float: left
         .jp-volume-max
           float: right
-          margin-right: 20px
+          margin-right: 18px
       ul.jp-toggles
         display: none
       .jp-playlist
